--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My first webpage</title>
+        <title>Odin Recipes</title>
     </head>
 <!--comment-->
     <body>
